# Atlas

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  app.py
backend/app/agents/: __init__.py  architecture_agent.py  graph_agent.py  onboarding_agent.py  repository_agent.py
backend/app/api/routes/: __init__.py  analyze.py  neo4j.py
backend/app/core/: config.py  main.py
backend/app/graph/: __init__.py  builder.py  models.py
backend/app/parsers/: __init__.py  framework_detector.py  tree_sitter_parser.py
backend/app/schemas/: __init__.py  models.py
backend/app/services/: __init__.py  github_service.py  graph_search_service.py  llm_service.py  neo4j_service.py
frontend/: next.config.js  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/repository/[id]/: page.tsx
frontend/src/app/repository/[id]/components/architecture/: ArchitecturePanel.tsx  index.ts
frontend/src/app/repository/[id]/components/chat/: ChatInterface.tsx
frontend/src/app/repository/[id]/components/github-input/: GitHubInput.tsx  index.ts
frontend/src/app/repository/[id]/components/graph/: GraphSearchPanel.tsx  GraphView.tsx  index.ts
frontend/src/app/repository/[id]/components/onboarding/: OnboardingPanel.tsx  index.ts
frontend/src/components/: Layout.tsx
frontend/src/services/: api.ts
frontend/src/store/: useAnalysisStore.ts
frontend/src/types/: index.ts
