[tool.poetry]
name = "atlas-backend"
version = "0.1.0"
description = "Atlas - AI-powered repository intelligence platform"
authors = ["Doniele Antonio <donyelqt@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
httpx = "^0.27.0"
openai = "^1.35.0"
anthropic = "^0.30.0"
google-generativeai = "^0.5.0"
tree-sitter = "^0.21.0"
tree-sitter-languages = "^1.11.0"
networkx = "^3.3"
gitpython = "^3.1.43"
redis = "^5.0.3"
celery = { extras = ["redis"], version = "^5.4.0" ]
tenacity = "^8.3.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.5.0"
mypy = "^1.10.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
